[project]
name = "stiqueue"
version = "1.0.5"
authors = [
  { name="Ahmad Alobaid", email="ahmad88me@gmail.com"},
]
description = "A simple messaging queue"
readme = "README-pypi.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ahmad88me/stiqueue"
Issues = "https://github.com/ahmad88me/stiqueue/issues"

