[project]
name = "stiqueue"
version = "1.3.0"
authors = [
  { name="Ahmad Alobaid", email="ahmad88me@gmail.com"},
]
description = "StiQueue is a lightweight messaging queue system designed to be simple, flexible, and easy to use."
readme = "README-pypi.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Homepage = "https://github.com/ahmad88me/stiqueue"
Issues = "https://github.com/ahmad88me/stiqueue/issues"
Documentation = "https://ahmad88me.github.io/stiqueue/"

[tool.setuptools.packages.find]
where = ["src"]
